<resources>
    <string name="app_name">Login Screen</string>
    <string name="Email_address">Enter Your Email Address</string>
    <string name="Password">Enter Your Password</string>
    <string name="Login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="attempts_left">Attempts Left:</string>
    <string name="_3">3</string>
    <string name="Password_screen">Add Password Screen</string>
    <string name="AddPassword">Add Password</string>
    <string name="Website">Website</string>
    <string name="Username">Username</string>
    <string name="EnterPassword">Enter Password</string>
    <string name="Saved_Password">Your Saved Passwords</string>
    <string name="Add_Button">Button with plus sign</string>
    <string name="theme">CHOOSE YOUR THEME</string>
    <string name="next">NEXT</string>


</resources>